--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -117,7 +117,7 @@ act$isWeekday<-ifelse(act$weekday=="Sonntag" | act$weekday=="Samstag","weekend",
 
 2 Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was creating using simulated data:
 
-```{r}
+```{r, results="hide"}
 library(lattice)
 #calculate the mean value
 act[,wd_mean:=mean(steps,na.rm=TRUE),by=c("isWeekday","interval")]
